# blango

./: db.sqlite3  manage.py  pyproject.toml
blango/: settings.py  urls.py
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py  0002_comment.py
