[tool.poetry]
name = "blango"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Amir Espahbodi <dev.amir.espahbodii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ruff = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

